# OpenNFT

./: README.md  pyproject.toml
opennft/: config.py  opennft.py  ptbscreen.py  ptbsound.py
opennft/matlab/: addMatlabDirs.m  mainLoopEntry.m  nfbCalc.m  setupProcParams.m
opennft/matlab/nfbPreprSig/: preprSig.m
opennft/matlab/nfbSound/: ptbSoundClose.m  ptbSoundPlay.m  ptbSoundPreparation.m
opennft/matlab/utils/: loadJsonProtocol.m
opennft/ui/: opennft.ui
tests/: testRTexp.py
